--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,23 +50,28 @@ body {
   --orange-color: #fd6e0a;
 }
 /* <!-- ========== Header Section Start Now ========== --> */
-nav {
+.container {
+  width: 1140px;
+  margin: 0 auto;
+}
+.nav_wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 51px 200px;
+  margin: 51px 0;
 }
-nav h3 {
+nav .nav_wrapper h3 {
   font-weight: 700;
   color: var(--primary-text-color);
   font-size: 45px;
 }
-nav h3 span {
+nav .nav_wrapper h3 span {
   color: var(--orange-color);
 }
-nav ul {
+nav .nav_wrapper ul {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 nav ul li {
   margin-right: 51px;
