--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,8 +331,80 @@ hr {
   color: white;
 }
 /* ==== Resume section end now === */
-/* ==== Nav section Start now === */
-/* ==== Nav section end now === */
+/* ==== Footer section Start now === */
+.footer {
+  padding: 130px 0;
+
+  margin-top: 113px;
+  background: var(--bg-primary);
+}
+.footer_wrapper {
+  display: flex;
+  gap: 117px;
+}
+.footer_column_one h3 {
+  font-size: 35px;
+  font-weight: 700;
+  color: var(--primary-text-color);
+}
+.footer_column_one p {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--secondary-text-color);
+  line-height: 28px;
+  max-width: 562px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.icons {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.icons a {
+  color: var(--orange-color);
+}
+.footer_column_two h3 {
+  font-size: 35px;
+  font-weight: 700;
+  color: var(--primary-text-color);
+  margin-bottom: 24px;
+}
+
+input[type='text'],
+input[type='email'],
+textarea {
+  width: 461px !important;
+  height: 64px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  background-color: white;
+  display: block;
+  width: 100%;
+  padding: 18px 30px;
+  margin-bottom: 24px;
+  border: 1px solid var(--white-color);
+}
+input:focus {
+  outline: none;
+}
+
+.footer_button a {
+  padding: 18px 39px;
+  background-color: var(--orange-color);
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--white-color);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+/* ==== Footer section end now === */
 /* ==== Nav section Start now === */
 /* ==== Nav section end now === */
 /* ==== Nav section Start now === */
